@startuml

title __LOGINSINGUP's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace LoginSingup {
      class com.example.cardihealt.LoginSingup.Login {
          ~ RC_SIGN_IN : int
          ~ TAG : String
          ~ nDatabase : DatabaseReference
          - btnEntrar : Button
          - btnGmail : ImageButton
          - btnRegistrar : Button
          - contraseña : String
          - firebaseAuth : FirebaseAuth
          - mGoogleSignInClient : GoogleSignInClient
          - pass : EditText
          - progressDialog : ProgressDialog
          - user : EditText
          - usuario : String
          + googlesSignInOptions()
          + onActivityResult()
          + onClick()
          + onKeyDown()
          # onCreate()
          # onStart()
          - entrar()
          - firebaseAuthWithGoogle()
          - signIn()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace LoginSingup {
      class com.example.cardihealt.LoginSingup.Registro {
          ~ nDatabase : DatabaseReference
          - btnAtrasReg : Button
          - btnRegistrarReg : Button
          - contraseña : String
          - firebaseAuth : FirebaseAuth
          - passReg : EditText
          - progressDialog : ProgressDialog
          - userReg : EditText
          - usuario : String
          + onClick()
          # onCreate()
          - registrarUsuario()
      }
    }
  }
  

  com.example.cardihealt.LoginSingup.Login .up.|> android.view.View.OnClickListener
  com.example.cardihealt.LoginSingup.Login -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.cardihealt.LoginSingup.Registro .up.|> android.view.View.OnClickListener
  com.example.cardihealt.LoginSingup.Registro -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
